--- a/server/docker.html
+++ b/server/docker.html
@@ -147,7 +147,7 @@ docker pull bolcom/unftp:v0.14.5-scratch
 </code></pre>
 <p>Example running unFTP in a Docker container:</p>
 <pre><code class="language-sh">docker run \
-  -e ROOT_DIR=/ \
+  -e UNFTP_ROOT_DIR=/ \
   -e UNFTP_LOG_LEVEL=info \
   -e UNFTP_FTPS_CERTS_FILE='/unftp.crt' \
   -e UNFTP_FTPS_KEY_FILE='/unftp.key' \
@@ -156,12 +156,7 @@ docker pull bolcom/unftp:v0.14.5-scratch
   -e UNFTP_SBE_GCS_BUCKET=the-bucket-name \
   -e UNFTP_SBE_GCS_KEY_FILE=/key.json \
   -p 2121:2121 \
-  -p 50000:50000 \
-  -p 50001:50001 \
-  -p 50002:50002 \
-  -p 50003:50003 \
-  -p 50004:50004 \
-  -p 50005:50005 \
+  -p 50000-50020:50000-50020 \
   -p 8080:8080 \
   -v /Users/xxx/unftp/unftp.key:/unftp.key  \
   -v /Users/xxx/unftp/unftp.crt:/unftp.crt \
