--- a/server/docker.html
+++ b/server/docker.html
@@ -13,16 +13,16 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1719261604"
+    <link rel="stylesheet" type="text/css" href="/assets/normalize.css?v=1737229553"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1719261604"
+    <link rel="stylesheet" type="text/css" href="/assets/doctave-style.css?v=1737229553"
         media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1719261604" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1719261604"
+    <link rel="stylesheet" type="text/css" href="/assets/katex.css?v=1737229553" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/assets/prism-ghcolors.css?v=1737229553"
         media="screen" />
 
     <script>
-        var DOCTAVE_TIMESTAMP = "1719261604";
+        var DOCTAVE_TIMESTAMP = "1737229553";
         var BASE_PATH = "/";
         var color = localStorage.getItem('doctave-color')
 
@@ -144,13 +144,12 @@
             </div>
             <div class='doctave-content'>
                 <p>You can download pre-made docker images from <a href="https://hub.docker.com/r/bolcom/unftp/tags">docker hub</a> e.g.:</p>
-<pre><code class="language-sh">docker pull bolcom/unftp:v0.14.7-alpine
-docker pull bolcom/unftp:v0.14.7-alpine-istio
-docker pull bolcom/unftp:v0.14.7-scratch
+<pre><code class="language-sh">docker pull bolcom/unftp:v0.15.1-alpine
+docker pull bolcom/unftp:v0.15.1-scratch
 </code></pre>
 <p>Example running unFTP in a Docker container:</p>
 <pre><code class="language-sh">docker run \
-  -e ROOT_DIR=/ \
+  -e UNFTP_ROOT_DIR=/ \
   -e UNFTP_LOG_LEVEL=info \
   -e UNFTP_FTPS_CERTS_FILE='/unftp.crt' \
   -e UNFTP_FTPS_KEY_FILE='/unftp.key' \
@@ -159,18 +158,13 @@ docker pull bolcom/unftp:v0.14.7-scratch
   -e UNFTP_SBE_GCS_BUCKET=the-bucket-name \
   -e UNFTP_SBE_GCS_KEY_FILE=/key.json \
   -p 2121:2121 \
-  -p 50000:50000 \
-  -p 50001:50001 \
-  -p 50002:50002 \
-  -p 50003:50003 \
-  -p 50004:50004 \
-  -p 50005:50005 \
+  -p 50000-50020:50000-50020 \
   -p 8080:8080 \
   -v /Users/xxx/unftp/unftp.key:/unftp.key  \
   -v /Users/xxx/unftp/unftp.crt:/unftp.crt \
   -v /Users/xxx/unftp/the-key.json:/key.json \
   -ti \
-  bolcom/unftp:v0.14.7-alpine
+  bolcom/unftp:v0.15.1-alpine
 </code></pre>
 
             </div>
@@ -198,11 +192,11 @@ docker pull bolcom/unftp:v0.14.7-scratch
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/assets/katex.js?v=1719261604"></script>
-    <script type="text/javascript" src="/assets/mermaid.js?v=1719261604"></script>
-    <script type="text/javascript" src="/assets/elasticlunr.js?v=1719261604"></script>
-    <script type="text/javascript" src="/assets/prism.js?v=1719261604"></script>
-    <script type="text/javascript" src="/assets/doctave-app.js?v=1719261604"></script>
+    <script type="text/javascript" src="/assets/katex.js?v=1737229553"></script>
+    <script type="text/javascript" src="/assets/mermaid.js?v=1737229553"></script>
+    <script type="text/javascript" src="/assets/elasticlunr.js?v=1737229553"></script>
+    <script type="text/javascript" src="/assets/prism.js?v=1737229553"></script>
+    <script type="text/javascript" src="/assets/doctave-app.js?v=1737229553"></script>
 
     
 </body>
